// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Actions should match snapshots 1`] = `
<styled.div>
  <ActionStatus
    operationState="SCHEDULED"
    operationType="UPDATE_RETRIES"
  />
  <ActionItems />
</styled.div>
`;

exports[`Actions should match snapshots 2`] = `
<styled.div>
  <ActionStatus
    operationState="FAILED"
    operationType="UPDATE_RETRIES"
  />
  <ActionItems />
</styled.div>
`;
